konpu-macros/tests/ui/fail_ignore_missing_reason.rs
#[konpu::ignore(note = "missing reason")]
fn ignore_no_reason() {}